--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,254 @@
-body {
+*{
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    list-style: none;
+}
+body{
+  width: 100%;
+}
+.main{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+/* Navbar */
+.navbar{
+  background-color: #F8F9FA;
+  padding: 10px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 50px;
+}
+.brand{
+  display: flex;
+  align-items: center;
+}
+.brand-logo{
+  height: 40px;
+}
+.brand-name{
+  font-size: 24px;
+  font-weight: bold;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.link{
+  padding: 5px 10px;
+  color: #84757D;
+  /* line-height: 2px; */
+  font-weight:500;
+  text-decoration: none;
+}
+.link:hover{
+  border-bottom: 2px solid #EF6439;
+  color: #EF6439;
+}
+.active{
+  color: #EF6439;
+}
+.profile{
+  height: 40px;
+  background-color: #212529;
+  border-radius: 50%;
+}
+.collapse-btn{
+  display: none;
+}
+
+/* home */
+.home-main{
+  width: 100%;
+  display: flex;
+  margin-top: 20px;
+}
+.home-main-left{
+  width: 50%;
+  padding: 10px;
+}
+.work-action{
+  box-shadow: #F7D100 0px 3px 8px;
+  width: fit-content;
+  padding: 10px 20px;
+  margin: 10px;
+}
+.internships-container{
+  display: flex;
+}
+.internship{
+  background-color: #F7D100;
+  width: fit-content;
+  padding: 10px 20px;
+  border-radius: 10px;
+  margin: 10px;
+}
+.home-main-right{
+  height: 300px;
+  width: 50%;
+  margin: 10px;
+  border-radius: 10px;
+  padding: 10px;
+  background-color: #D9B27C;
+}
+
+/* JOBS */
+.myjobs-left{
+  width: 20%;
+  margin: 5px;
+}
+.h5-link{
+  padding: 10px 20px;
+  margin: 5px;
+  background-color: #F8F9FA;
+  cursor: pointer;
+}
+.h5-link:hover{
+  color: white;
+  background-color: #84757D;
+}
+.myjobs-mid{
+  width: 40%;
+  margin: 5px;
+}
+#for-screening-task{
+  display: none;
+}
+#for-application-status{
+  display: none;
+}
+.myjob-mid-main{
+  box-shadow: #F7D100 0px 3px 8px;
+  padding: 20px 10px;
+}
+.myjobs-right{
+  height: 300px;
+  width: 40%;
+  border-radius: 10px;
+  margin: 5px;
+  padding: 10px;
+  background-color: #D9B27C;
+}
+.active-link{
+  background-color: #84757D;
+  color: white;
+}
+
+/* payment */
+.payment-left{
+  width: 20%;
+  padding: 10px 20px;
+}
+.payment-link{
+  background-color:#F8F9FA;
+  margin: 5px 0px;
+  padding: 10px 2px;
+  cursor: pointer;
+}
+.active-payment-link{
+  background-color: #84757D;
+  color: white;
+}
+.payment-link:hover{
+  background-color: #84757D;
+  color: white;
+}
+.payment-mid{
+  width: 60%;
+  border: 2px solid black;
+  border-radius: 20px;
+  padding: 10px 20px;
+  color: #84757D;
+}
+#bank-details{
+  display: none;
+}
+.payment-right{
+  padding: 10px 20px;
+  width: 20%;
+}
+
+/* offerletter */
+.offerletter{
+  width: 70%;
+  height: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #84757D;
+}
+
+/* certificate */
+.certificate-img{
+  height: 500px;
+}
+.certificate{
+  width: 70%;
+  height: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #84757D;
+}
+
+
+
+@media (max-width:820px) {
+  .collapse-btn{
+    display: block;
+  }
+.nav-middle{
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  background-color: black;
+  top: 60px;
+  left: 0px;
+  width: 100%;
+  display: none;
+  }
+  .nav-right{
+    display: none;
+  }
+  .home-main{
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+  .home-main-right{
+    width: 90%;
+    margin: 0%;
+  }
+  .home-main-left{
+    width: 100%;
+    margin: 0%;
+  }
+  #myjobs-main{
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+  .myjobs-left{
+    width: 90%;
+  }
+  .myjobs-mid{
+    width: 90%;
+  }
+  .myjobs-right{
+    width: 90%;
+  }
+  #payment-main{
+    flex-direction: column;
+    align-items: center;
+  }
+  .payment-left{
+    width: 90%;
+  }
+  .payment-mid{
+    width: 90%;
+  }
+  .payment-right{
+    width: 90%;
+  }
 }
